# syclang

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  EFI_UPDATE_COMPLETE.md  README.md  SYSLANG.md  SYSLANG_V3.md  SYSLANG_V4.md  UPGRADE_SUMMARY.md  WINDOWS_FIX.md  build_windows.bat  deploy.sh  fix_includes.ps1
.github/workflows/: ci.yml
efi_system/: README.md  efi_kernel.syl
efi_system/include/: efi_types.h
examples/: efi_hello.syl  hello.syl  inline_asm.syl  v3_actor_example.syl
include/syclang/: symbol_table.h
include/syclang/ai/: ai_assistant.h
include/syclang/codegen/: codegen_base.h  inline_assembly.h  wasm_codegen.h
include/syclang/codegen/arm64/: arm64_codegen.h
include/syclang/codegen/x64/: x64_codegen.h
include/syclang/heterogeneous/: hetero_compute.h
include/syclang/ir/: actor_system.h  ir.h  ir_generator.h  platform_generator.h
include/syclang/lexer/: chinese_lexer.h  lexer.h  token.h
include/syclang/optimizer/: optimizer.h
include/syclang/parser/: ast.h  parser.h
include/syclang/quantum/: quantum_runtime.h
include/syclang/verification/: formal_verification.h
lib/: CMakeLists.txt  stdlib.c
release/syclang-v4.0.0/: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  syclang
release/syclang-v4.0.0/examples/: fibonacci.syl  v3_wasm_example.syl  v4_quantum_example.syl
scripts/: build_efi_all.sh  upload_to_github.sh
src/: main.cpp  symbol_table.cpp
src/codegen/: codegen_base.cpp  inline_assembly.cpp
src/codegen/arm64/: arm64_codegen.cpp
src/codegen/x64/: x64_codegen.cpp
src/ir/: actor_system.cpp  ir.cpp  ir_generator.cpp  platform_generator.cpp
src/lexer/: chinese_lexer.cpp  lexer.cpp  token.cpp
src/optimizer/: optimizer.cpp
src/parser/: ast.cpp  parser.cpp
tests/: CMakeLists.txt  main_test.cpp
